--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="/MOBLIE-APP-Introduction/photos/profile_phu.png"
+              src="./photos/profile_phu.png"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -164,7 +164,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="https://i.pinimg.com/736x/4c/f9/77/4cf977fb121bf7c45def38279db01331.jpg"
+              src="https://media.discordapp.net/attachments/918872233601007626/1335468482627899535/skibidi_pat_3.jpg?ex=67a04772&is=679ef5f2&hm=7002c8f6bcd738711031aab3f8534ae8a4e12ddca9f2bd52da303a5e22a67f26&=&format=webp&width=671&height=671"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -221,7 +221,7 @@
           <div class="carousel-item">
             <div class="gap-x d-md-flex justify-items-center">
               <img
-                src="/MOBLIE-APP-Introduction/photos/profile_phu.png"
+                src="./photos/profile_phu.png"
                 class="img1"
                 alt="Phu"
               />
@@ -259,17 +259,19 @@
                 src="https://cdn.discordapp.com/attachments/1157314954655973466/1335456473244897423/Screenshot_2025-02-02_104153.jpg?ex=67a03c42&is=679eeac2&hm=7f64ecd618745f335fe2ac8116f6afaa14ebcc4fb1a1920ed39d652d8c59b7d2&"
                 class="img1"
                 alt="Bow"
+                style="aspect-ratio: 1/1"
               />
               <div class="text-item">
                 <h1>นางสาววณิชญา เรืองรักเรียน</h1>
-                <p>ชื่อ วณิชญา เรืองรักเรียน ชื่อเล่น โบว์</p>
-                <p>
-                  อายุ 19 ปี จะ 20 อีก 2 วันนับจากวันที่ 2 กุมภา แต่จิตใจยัง 15
-                </p>
-                <p>
+                <span style="font-family: 'Poppins', 'Kanit', 'serif';">
+                  ชื่อ วณิชญา เรืองรักเรียน ชื่อเล่น โบว์
+                  <p style="margin-top: 16px;">
+                    อายุ 19 ปี จะ 20 อีก 2 วันนับจากวันที่ 2 กุมภา แต่จิตใจยัง
+                    15
+                  </p>
                   อาหารที่ชอบ ชาบู ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่
-                  ไม่อร่อยเลี้ยน
-                </p>
+                  ไม่อร่อยเลี้ยนㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
+                </span>
                 <div class="social-icon">
                   <a
                     href="https://www.facebook.com/bowkk.vanichaya"
@@ -361,21 +363,23 @@
           <div class="carousel-item">
             <div class="gap-x d-md-flex justify-items-center">
               <img
-                src="https://i.pinimg.com/736x/4c/f9/77/4cf977fb121bf7c45def38279db01331.jpg"
-                class="img1"
+                src="https://media.discordapp.net/attachments/918872233601007626/1335468482627899535/skibidi_pat_3.jpg?ex=67a04772&is=679ef5f2&hm=7002c8f6bcd738711031aab3f8534ae8a4e12ddca9f2bd52da303a5e22a67f26&=&format=webp&width=671&height=671"
+                class="img1 img-container"
                 alt="Pat"
               />
               <div class="text-item">
                 <h1>นายภัทรดนัย จำรัส</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  ข้าพเจ้านายภัทรดนัย จำรัส หรือจะเรียกสั้น ๆ ว่า ภัทร
+                  เกิดในปีพุทธศักราช 2547 ในเดือนพฤศจิกายน
+                  ในเวลาว่างนั้นข้าพเจ้าชอบทำอาหาร
+                  เล่นเกมส์และออกกำลังกายในยามที่เบื่อหน่าย อีกทั้ง ณ
+                  ตอนนี้ข้าพเจ้าได้เข้ารับการศึกษาในคณะวิศวกรรมศาสตร์
+                  มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าลาดกระบัง
+                  และเป็นนักศึกษาชั้นปีที่ 2
+                  ในสาขาวิศวกรรมคอมพิวเตอร์ไอโอทีและสารสนเทศ
+                  หากมีคำถามหรือสนใจติดต่อได้ที่เบอร์โทรศัพท์ 098-765-4321
+                  ขอบคุณครับ
                 </p>
                 <div class="social-icon">
                   <a
@@ -398,244 +402,6 @@
             </div>
           </div>
         </div>
-  <section class="container">
-    <h2 class="d-flex justify-center mx-auto my-5">SKIBIDI Group</h2>
-    <div class="row row-cols-2 row-cols-md-3 gap-y mx-auto">
-      <div class="box col">
-        <div class="card">
-          <img class="card-img-top" src="https://i.pinimg.com/736x/40/52/80/4052807b66095d065442c9b5684168ab.jpg"
-            alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">นายพีรณัฐ จงรักดี</p>
-            <p class="card-text">66010583</p>
-          </div>
-        </div>
-      </div>
-      <div class="box col">
-        <div class="card">
-          <img class="card-img-top" src="https://i.pinimg.com/736x/93/6d/51/936d510dd25a6b20f1a594a21d3122dc.jpg"
-            alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">นายภวดล เนื้อสะอาด</p>
-            <p class="card-text">66010608</p>
-          </div>
-        </div>
-      </div>
-      <div class="box col">
-        <div class="card">
-          <img class="card-img-top"
-            src="https://media.discordapp.net/attachments/1157314954655973466/1335459265321762837/Screenshot_2025-02-02_104153.png?ex=67a03edc&is=679eed5c&hm=b4531d87b30eec6b16130eb85d98d0e45e6c1b8b5599d59ac33a5698c95689a5&=&format=webp&quality=lossless&width=662&height=662"
-            alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">นางสาววณิชญา เรืองรักเรียน</p>
-            <p class="card-text">66010725</p>
-          </div>
-        </div>
-      </div>
-      <div class="box col">
-        <div class="card">
-          <img class="card-img-top"
-            src="https://cdn.discordapp.com/attachments/1213843735373283350/1335453641850490950/03423e89-d471-487b-b8dc-f65436d85fa1_11zon.png?ex=67a0399f&is=679ee81f&hm=a24f0804ebfba00b05a421facf331f66e10d12e323838731ff3599a30e36ee6f&"
-            alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">นายอิทธิกร แป้นบางนา</p>
-            <p class="card-text">66010935</p>
-          </div>
-        </div>
-      </div>
-      <div class="box col">
-        <div class="card">
-          <img class="card-img-top" src="https://i.pinimg.com/736x/58/46/b6/5846b6c10eb85b342b8f5cf6708db09e.jpg"
-            alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">นายเตชะไพบูลย์ สร้อยสระคู</p>
-            <p class="card-text">66011368</p>
-          </div>
-        </div>
-      </div>
-      <div class="box col">
-        <div class="card">
-          <img class="card-img-top" src="https://media.discordapp.net/attachments/918872233601007626/1335468482627899535/skibidi_pat_3.jpg?ex=67a04772&is=679ef5f2&hm=7002c8f6bcd738711031aab3f8534ae8a4e12ddca9f2bd52da303a5e22a67f26&=&format=webp&width=671&height=671"
-            alt="Card image cap" style="aspect-ratio: 1/1;" />
-          <div class="card-body">
-            <p class="card-text">นายภัทรดนัย จำรัส</p>
-            <p class="card-text">66011448</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="container mt-800">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="gap-x d-md-flex justify-items-center">
-            <img src="https://i.pinimg.com/736x/40/52/80/4052807b66095d065442c9b5684168ab.jpg" class="img1" alt="Get" />
-            <div class="text-item">
-              <h1>นายพีรณัฐ จงรักดี</h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
-              </p>
-              <div class="social-icon">
-                <a href="https://www.facebook.com/peeranat.chongrakdee.5" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/p_ranut/" target="_blank">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-line"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="gap-x d-md-flex justify-items-center">
-            <img src="https://i.pinimg.com/736x/93/6d/51/936d510dd25a6b20f1a594a21d3122dc.jpg" class="img1" alt="Phu" />
-            <div class="text-item">
-              <h1>นายภวดล เนื้อสะอาด</h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
-              </p>
-              <div class="social-icon">
-                <a href="https://www.facebook.com/phupa.nuresaard" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/phupn_/" target="_blank">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-line"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="gap-x d-md-flex justify-items-center">
-            <img
-              src="https://cdn.discordapp.com/attachments/1157314954655973466/1335456473244897423/Screenshot_2025-02-02_104153.jpg?ex=67a03c42&is=679eeac2&hm=7f64ecd618745f335fe2ac8116f6afaa14ebcc4fb1a1920ed39d652d8c59b7d2&"
-              class="img1" alt="Bow" style="aspect-ratio: 1/1;"/>
-            <div class="text-item">
-              <h1>นางสาววณิชญา เรืองรักเรียน</h1>
-              <p>
-                ชื่อ วณิชญา เรืองรักเรียน
-                ชื่อเล่น โบว์ 
-                <p>อายุ 19 ปี จะ 20 อีก 2 วันนับจากวันที่ 2 กุมภา แต่จิตใจยัง 15</p>
-                อาหารที่ชอบ ชาบู
-                ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่ ไม่อร่อยเลี้ยนㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-              </p>
-              <div class="social-icon">
-                <a href="https://www.facebook.com/bowkk.vanichaya" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/vanit.rx/" target="_blank">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-line"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="gap-x d-md-flex justify-items-center">
-            <img
-              src="https://cdn.discordapp.com/attachments/1213843735373283350/1335453641850490950/03423e89-d471-487b-b8dc-f65436d85fa1_11zon.png?ex=67a0399f&is=679ee81f&hm=a24f0804ebfba00b05a421facf331f66e10d12e323838731ff3599a30e36ee6f&"
-              class="img1" alt="Peem" />
-            <div class="text-item">
-              <h1>นายอิทธิกร แป้นบางนา</h1>
-              <p>
-                สวัสดีครับ ผมชื่ออิทธิกร แป้นบางนา ชื่อเล่น ภีม อายุ 20 ปี ตอนนี้กำลังศึกษาอยู่ที่คณะวิศวกรรมศาสตร์
-                ในอนาคตผมอยากเป็นวิศวกรที่สามารถสร้างสรรค์นวัตกรรมใหม่ๆ เพื่อช่วยพัฒนาสังคมและประเทศชาติ
-                ยินดีที่ได้รู้จักทุกคนครับ!
-              </p>
-              <div class="social-icon">
-                <a href="https://www.facebook.com/daeo.gawa" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/peem_misus" target="_blank">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="https://line.me/ti/p/I490wXYDdu" target="_blank">
-                  <i class="fa-brands fa-line"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="gap-x d-md-flex justify-items-center">
-            <img src="https://i.pinimg.com/736x/58/46/b6/5846b6c10eb85b342b8f5cf6708db09e.jpg" class="img1"
-              alt="Techa" />
-            <div class="text-item">
-              <h1>นายเตชะไพบูลย์ สร้อยสระคู</h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
-              </p>
-              <div class="social-icon">
-                <a href="https://www.facebook.com/maime.kub.58" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/shaft_fxrd/" target="_blank">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-line"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="gap-x d-md-flex justify-items-center">
-            <img src="https://media.discordapp.net/attachments/918872233601007626/1335468482627899535/skibidi_pat_3.jpg?ex=67a04772&is=679ef5f2&hm=7002c8f6bcd738711031aab3f8534ae8a4e12ddca9f2bd52da303a5e22a67f26&=&format=webp&width=671&height=671" 
-            class="img1 img-container" 
-            alt="Pat" 
-            />
-            <div class="text-item">
-              <h1>นายภัทรดนัย จำรัส</h1>
-              <p>
-                ข้าพเจ้านายภัทรดนัย จำรัส หรือจะเรียกสั้น ๆ ว่า ภัทร เกิดในปีพุทธศักราช 2547 ในเดือนพฤศจิกายน ในเวลาว่างนั้นข้าพเจ้าชอบทำอาหาร เล่นเกมส์และออกกำลังกายในยามที่เบื่อหน่าย อีกทั้ง ณ ตอนนี้ข้าพเจ้าได้เข้ารับการศึกษาในคณะวิศวกรรมศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ และเป็นนักศึกษาชั้นปีที่ 2 ในสาขาวิศวกรรมคอมพิวเตอร์ไอโอทีและสารสนเทศ หากมีคำถามหรือสนใจติดต่อได้ที่เบอร์โทรศัพท์ 098-765-4321 ขอบคุณครับ 
-              </p>
-              <div class="social-icon">
-                <a href="https://www.facebook.com/patrdanai.chumrus" target="_blank">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/_patrdanai/" target="_blank">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                  <i class="fa-brands fa-line"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
         <button
           class="carousel-control-prev"
