--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="https://i.pinimg.com/736x/58/46/b6/5846b6c10eb85b342b8f5cf6708db09e.jpg"
+              src="https://cdn.discordapp.com/attachments/1094113792532680795/1335604056466653256/43361981-E416-4F16-B719-E8E0155D6218.jpg?ex=67a0c5b5&is=679f7435&hm=6e4d5904abc7c239ecab1ccc86d72d4259398ae470f82ea7b1d430fd4a4d1631&"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -270,10 +270,10 @@
                     15
                   </p>
                   อาหารที่ชอบ ชาบู ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่
-                  ไม่อร่อยเลี้ยนㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
+                  
                 </span>
                 <div class="social-icon">
-                  <a
+                  <aw
                     href="https://www.facebook.com/bowkk.vanichaya"
                     target="_blank"
                   >
@@ -324,22 +324,16 @@
           <div class="carousel-item">
             <div class="gap-x d-md-flex justify-items-center">
               <img
-                src="https://i.pinimg.com/736x/58/46/b6/5846b6c10eb85b342b8f5cf6708db09e.jpg"
-                class="img1"
+                src="https://cdn.discordapp.com/attachments/1094113792532680795/1335604056466653256/43361981-E416-4F16-B719-E8E0155D6218.jpg?ex=67a0c5b5&is=679f7435&hm=6e4d5904abc7c239ecab1ccc86d72d4259398ae470f82ea7b1d430fd4a4d1631&"
+                class="img1 img-container"
                 alt="Techa"
               />
               <div class="text-item">
                 <h1>นายเตชะไพบูลย์ สร้อยสระคู</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  สวัสดีครับผมชื่อ ฟอร์ด ปีนี้อายุ 20 ปี
                 </p>
+                  ตอนนี้อยาก ไปทำงานทางด้าน ฮาร์ดเเวร์ ขอบคุณครับ
                 <div class="social-icon">
                   <a
                     href="https://www.facebook.com/maime.kub.58"
@@ -353,7 +347,7 @@
                   >
                     <i class="fa-brands fa-instagram"></i>
                   </a>
-                  <a href="#">
+                  <a href="https://line.me/ti/p/uEMuYBS-D5" target="_blank">
                     <i class="fa-brands fa-line"></i>
                   </a>
                 </div>
