--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="https://i.pinimg.com/736x/40/52/80/4052807b66095d065442c9b5684168ab.jpg"
+              src="https://cdn.discordapp.com/attachments/801373203154337834/1335611830961176716/IMG_1285.jpg?ex=67a0ccf2&is=679f7b72&hm=78ac51a7cc876ee9af58909c63ba21d68181180b253bbdba335f289a82c995e2&"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -185,7 +185,7 @@
           <div class="carousel-item active">
             <div class="gap-x d-md-flex justify-items-center">
               <img
-                src="https://i.pinimg.com/736x/40/52/80/4052807b66095d065442c9b5684168ab.jpg"
+                src="https://cdn.discordapp.com/attachments/801373203154337834/1335611830961176716/IMG_1285.jpg?ex=67a0ccf2&is=679f7b72&hm=78ac51a7cc876ee9af58909c63ba21d68181180b253bbdba335f289a82c995e2&"
                 class="img1"
                 alt="Get"
               />
