--- a/index.html
+++ b/index.html
@@ -192,14 +192,8 @@
               <div class="text-item">
                 <h1>นายพีรณัฐ จงรักดี</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  <div>สวัสดีครับผมชื่อนายพีรณัฐ จงรักดี อายุ20ขวบ ปัจจุบันอาศัยอยู่ที่บ้านกับครอบครัว งานอดิเรกชอบเล่นเกม ฟังเพลง ดูการ์ตูน ดูไปเรื่อย</div>
+                  อาหารที่ชอบคือผัดกะเพราหมูกรอบไข่ดาว ก๋วยเตี๋ยวเรือ แล้วก็ชอบชาบูปิ้งย่างด้วย ยินดีที่ได้รู้จักครับg
                 </p>
                 <div class="social-icon">
                   <a
