--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <h1>นายพีรณัฐ จงรักดี</h1>
                 <p>
                   <div>สวัสดีครับผมชื่อนายพีรณัฐ จงรักดี อายุ20ขวบ ปัจจุบันอาศัยอยู่ที่บ้านกับครอบครัว งานอดิเรกชอบเล่นเกม ฟังเพลง ดูการ์ตูน ดูไปเรื่อย</div>
-                  อาหารที่ชอบคือผัดกะเพราหมูกรอบไข่ดาว ก๋วยเตี๋ยวเรือ แล้วก็ชอบชาบูปิ้งย่างด้วย ยินดีที่ได้รู้จักครับg
+                  อาหารที่ชอบคือผัดกะเพราหมูกรอบไข่ดาว ก๋วยเตี๋ยวเรือ แล้วก็ชอบชาบูปิ้งย่างด้วย ยินดีที่ได้รู้จักครับ
                 </p>
                 <div class="social-icon">
                   <a
