fix: space slide pic

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <div class="card">
             <img
               class="card-img-top"
+              style="aspect-ratio: 1/1; object-fit: cover"
               src="https://cdn.discordapp.com/attachments/801373203154337834/1335611830961176716/IMG_1285.jpg?ex=67a0ccf2&is=679f7b72&hm=78ac51a7cc876ee9af58909c63ba21d68181180b253bbdba335f289a82c995e2&"
               alt="Card image cap"
             />
@@ -187,6 +188,7 @@
               <img
                 src="https://cdn.discordapp.com/attachments/801373203154337834/1335611830961176716/IMG_1285.jpg?ex=67a0ccf2&is=679f7b72&hm=78ac51a7cc876ee9af58909c63ba21d68181180b253bbdba335f289a82c995e2&"
                 class="img1"
+                style="object-fit: cover;"
                 alt="Get"
               />
               <div class="text-item">
@@ -253,7 +255,7 @@
                 src="https://cdn.discordapp.com/attachments/1157314954655973466/1335456473244897423/Screenshot_2025-02-02_104153.jpg?ex=67a03c42&is=679eeac2&hm=7f64ecd618745f335fe2ac8116f6afaa14ebcc4fb1a1920ed39d652d8c59b7d2&"
                 class="img1"
                 alt="Bow"
-                style="aspect-ratio: 1/1"
+                style="aspect-ratio: 1/1; object-fit: cover;"
               />
               <div class="text-item">
                 <h1>นางสาววณิชญา เรืองรักเรียน</h1>
@@ -263,11 +265,10 @@
                     อายุ 19 ปี จะ 20 อีก 2 วันนับจากวันที่ 2 กุมภา แต่จิตใจยัง
                     15
                   </p>
-                  อาหารที่ชอบ ชาบู ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่
-                  
+                  อาหารที่ชอบ ชาบู ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่เนื้อมันกินเยอะละเลี้ยนㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
                 </span>
                 <div class="social-icon">
-                  <aw
+                  <a
                     href="https://www.facebook.com/bowkk.vanichaya"
                     target="_blank"
                   >
@@ -321,13 +322,14 @@
                 src="https://cdn.discordapp.com/attachments/1094113792532680795/1335604056466653256/43361981-E416-4F16-B719-E8E0155D6218.jpg?ex=67a0c5b5&is=679f7435&hm=6e4d5904abc7c239ecab1ccc86d72d4259398ae470f82ea7b1d430fd4a4d1631&"
                 class="img1 img-container"
                 alt="Techa"
+                style="object-fit: cover;"
               />
               <div class="text-item">
                 <h1>นายเตชะไพบูลย์ สร้อยสระคู</h1>
                 <p>
                   สวัสดีครับผมชื่อ ฟอร์ด ปีนี้อายุ 20 ปี
                 </p>
-                  ตอนนี้อยาก ไปทำงานทางด้าน ฮาร์ดเเวร์ ขอบคุณครับ
+                  ตอนนี้อยาก ไปทำงานทางด้าน ฮาร์ดเเวร์ ขอบคุณครับ ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
                 <div class="social-icon">
                   <a
                     href="https://www.facebook.com/maime.kub.58"
